Kubernetes-Scripts/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kml-sample-app
  namespace: developer
  annotations:
    app.kubernetes.io/name: developer-ingress-sirpi
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /$2
    # cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - devops.sirpi.co.in
    secretName: dg-sirpi-selfsigned-tls
  rules:
  - host: "devops.sirpi.co.in"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kml-sample-app
              port:
                number: 3000
